    is_generalized_streett

  - the conversion from Rabin to Büchi was broken on Rabin-like
    acceptance condition where one pair used Fin(x) and another pair
    used Inf(x) with the same x.  Unfortunately, this situation could
    also occur as a side effect of simplifying the acceptance
    condition (by merging identical set) prior to running the
    conversion to Büchi.

New in spot 2.5 (2018-01-20)

  Build:

  - We no longer distribute the doxygen-generated documentation in
    the tarball of Spot to save space.  This documentation is still
    available online at https://spot.lrde.epita.fr/doxygen/.  If you
    want to build a local copy you can configure Spot with
    --enable-doxygen, or simply run "cd doc && make doc".

  - All the images that illustrate the documentation have been
    converted to SVG, to save space and improve quality.

  Tools:

  - ltlsynt is a new tool for synthesizing a controller from LTL/PSL
    specifications.

  - ltlcross learned --reference=COMMANDFMT to specify a translator
    that should be trusted.  Doing so makes it possible to reduce the
    number of tests to be performed, as all other translators will be
    compared to the reference's output when available.  Multiple
    reference can be given; in that case other tools are compared
    against the smallest reference automaton.

  - autcross, ltlcross, and ltldo learned --fail-on-timeout.

  - ltl2tgba, autfilt, and dstar2tgba have some new '--parity' and
    '--colored-parity' options to force parity acceptance on the
    output.  Different styles can be requested using for instance
    --parity='min odd' or --parity='max even'.

  - ltl2tgba, autfilt, and dstar2tgba have some new '--cobuchi' option
    to force co-Büchi acceptance on the output.  Beware: if the input
    language is not co-Büchi realizable the output automaton will
    recognize a superset of the input.  Currently, the output is
    always state-based.
