@@ -1119,18 +1119,19 @@ method.
 
 Here is a list of named properties currently used inside Spot:
 
-| key name            | (pointed) value type           | description                                                                                                                     |
-|---------------------+--------------------------------+---------------------------------------------------------------------------------------------------------------------------------|
-| ~automaton-name~    | ~std::string~                  | name for the automaton, for instance to display in the HOA format                                                               |
-| ~product-states~    | ~const spot::product_states~   | vector of pairs of states giving the left and right operands of each state in a product automaton                               |
-| ~original-states~   | ~std::vector<unsigned>~        | original state number before transformation (used by some algorithms like =degeneralize()=)                                     |
-| ~state-names~       | ~std::vector<std::string>~     | vector naming each state of the automaton, for display purpose                                                                  |
-| ~highlight-edges~   | ~std::map<unsigned, unsigned>~ | map of (edge number, color number) for highlighting the output                                                                  |
-| ~highlight-states~  | ~std::map<unsigned, unsigned>~ | map of (state number, color number) for highlighting the output                                                                 |
-| ~incomplete-states~ | ~std::set<unsigned>~           | set of states numbers that should be displayed as incomplete  (used internally by ~print_dot()~ when truncating large automata) |
-| ~degen-levels~      | ~std::vector<unsigned>~        | level associated to each state by the degeneralization algorithm                                                                |
-| ~simulated-states~  | ~std::vector<unsigned>~        | map states of the original automaton to states if the current automaton in the result of simulation-based reductions            |
-| ~synthesis-outputs~ | ~bdd~                          | conjunction of controllable atomic propositions (used by ~print_aiger()~ to determine which propositions should be encoded as outputs of the circuit)
+| key name            | (pointed) value type           | description                                                                                                                                           |
+|---------------------+--------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------|
+| ~automaton-name~    | ~std::string~                  | name for the automaton, for instance to display in the HOA format                                                                                     |
+| ~product-states~    | ~const spot::product_states~   | vector of pairs of states giving the left and right operands of each state in a product automaton                                                     |
+| ~original-states~   | ~std::vector<unsigned>~        | original state number before transformation (used by some algorithms like =degeneralize()=)                                                           |
+| ~original-clauses~  | ~std::vector<unsigned>~        | original DNF clause associated to each state in automata created by =dnf_to_streett()=                                                                |
+| ~state-names~       | ~std::vector<std::string>~     | vector naming each state of the automaton, for display purpose                                                                                        |
+| ~highlight-edges~   | ~std::map<unsigned, unsigned>~ | map of (edge number, color number) for highlighting the output                                                                                        |
+| ~highlight-states~  | ~std::map<unsigned, unsigned>~ | map of (state number, color number) for highlighting the output                                                                                       |
+| ~incomplete-states~ | ~std::set<unsigned>~           | set of states numbers that should be displayed as incomplete  (used internally by ~print_dot()~ when truncating large automata)                       |
+| ~degen-levels~      | ~std::vector<unsigned>~        | level associated to each state by the degeneralization algorithm                                                                                      |
+| ~simulated-states~  | ~std::vector<unsigned>~        | map states of the original automaton to states if the current automaton in the result of simulation-based reductions                                  |
+| ~synthesis-outputs~ | ~bdd~                          | conjunction of controllable atomic propositions (used by ~print_aiger()~ to determine which propositions should be encoded as outputs of the circuit) |
 Objects referenced via named properties are automatically destroyed
 when the automaton is destroyed, but this can be altered by passing a
 custom destructor as a third parameter to =twa::set_named_prop()=.
